# flask_live_crud

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py  routes.py
backup/: script.py
